--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="mobile-web-app-capable" content="yes">
 		
-		<link rel="stylesheet" type="text/css" href="css/app.css">
+		<link rel="stylesheet" type="text/css" href="dist/app.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.0.2/css/material-design-iconic-font.min.css">
 	</head>
 	<body ng-app="house-dating">
@@ -13,8 +13,8 @@
 		<div ui-view="mainContent" class="mainContent-container"></div>
 		
 		<script src="node_modules/angular/angular.js"></script>
-		<script src="node_modules/ui-router/release/ui-router.js"></script>
+		<script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
 		
-		<script src="js/app.js"></script>
+		<script src="dist/app.min.js"></script>
 	</body>
 </html>
